Breathe theme: More generally prevent partial offscreen positioning of o2 post dropdown menu on smaller viewports.
Props passoniate, coffee2code.
See #4878.
Fixes #4908.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9435 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
@@ -1441,9 +1441,8 @@ h2.toc-heading + h3.toc-heading:target {
 }
 
 @media (max-width: 550px) {
-	.post-type-archive-handbook nav.o2-post-actions ul,
-	.single-handbook nav.o2-post-actions ul {
-	    left: 0;
+	nav.o2-post-actions ul {
+	    left: initial;
 	}
 }
 
